--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-name: "Blog of Wenli Zhang"
-description: "Web Front-End Blog by Wenli Zhang"
+name: "Blog of Wharton"
+description: "IT Tech. Blog by Wharon"
 
-url: "http://zhangwenli.com/blog"
-loadingImg: "http://zhangwenli.com/blog/img/loading.gif"
-filePath: "http://zhangwenli.com/blog/img/"
+url: "http://wharton9.github.io/blog/"
+loadingImg: "http://wharton9.github.io/blog/img/loading.gif"
+filePath: "http://wharton9.github.io/blog/img/"
 
 timezone: Asia/Shanghai
 
